--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.codepath.apps.basictwitter.TwitterApp"
+        android:name=".TwitterApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -25,7 +25,7 @@
             android:value="1" />
 
         <activity
-            android:name="com.codepath.apps.basictwitter.LoginActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,16 +44,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.TimelineActivity"
+            android:name=".TimelineActivity"
             android:label="@string/title_activity_timeline" >
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.ComposeTweetActivity"
+            android:name=".ComposeTweetActivity"
             android:label="@string/title_activity_composetweet" >
         </activity>
         <activity
-            android:name="com.codepath.apps.basictwitter.ProfileActivity"
+            android:name=".ProfileActivity"
             android:label="@string/title_activity_Profile" >
+        </activity>
+        <activity
+            android:name=".MyProfileActivity"
+            android:label="@string/title_activity_my_profile" >
         </activity>
     </application>
 
